--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -15,20 +15,39 @@ body {
 
 .button {
   .flex(1);
-  background: @st-light-green;
   margin: 10px;
   padding: 10px;
   padding-top: 12px;
   text-align: center;
-  color: @df-charcoal;
+  color: @df-dark-gray;
   font-weight: bold;
   text-transform: uppercase;
   font-size: 14px;
   cursor: pointer;
+  transition: background .1s linear;
 
-  &:hover {
-    background: @st-dark-green;
+  &[data-region="americas"] {
+    background: lighten(#da2128, 20%);
+  }
+  &[data-region="ema"] {
+    background: lighten(#f36f21, 20%);
+  }
+  &[data-region="asia"] {
+    background: lighten(#524fa2, 20%);
+  }
+
+  &:hover, &.selected {
     color: white;
+
+    &[data-region="americas"] {
+      background: #da2128;
+    }
+    &[data-region="ema"] {
+      background: #f36f21;
+    }
+    &[data-region="asia"] {
+      background: #524fa2;
+    }
   }
 }
 
@@ -69,9 +88,18 @@ body {
 }
 
 .leaflet-marker-icon {
-  background: @st-dark-red !important;
   border-radius: 50%;
   border: none !important;
   width: 18px !important;
   height: 18px !important;
+
+  &.americas {
+    background: #da2128; 
+  }
+  &.ema {
+    background: #f36f21; 
+  }
+  &.asia {
+    background: #524fa2;
+  }
 }
