--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -57,7 +57,19 @@ body {
 
 .info-container {
   .flex(1);
-  padding-left: 10px;
+  padding: 10px;
+  padding-left: 20px;
+  font-size: 15px;
+
+  .hed {
+    font-family: @df-serif;
+    font-weight: bold;
+    font-size: 24px;
+    padding-bottom: 5px;
+  }
+  .loophole {
+    padding-top: 10px;
+  }
 }
 
 .aspect-ratio-outer {
