zoomy zoom zoom

--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -27,26 +27,26 @@ body {
   transition: background .1s linear;
 
   &[data-region="americas"] {
-    background: lighten(#da2128, 20%);
+    background: lighten(#2384c6, 20%);
   }
   &[data-region="ema"] {
-    background: lighten(#f36f21, 20%);
+    background: lighten(#524fa2, 20%);
   }
   &[data-region="asia"] {
-    background: lighten(#524fa2, 20%);
+    background: lighten(#2a9964, 20%);
   }
 
   &:hover, &.selected {
     color: white;
 
     &[data-region="americas"] {
-      background: #da2128;
+      background: #2384c6;
     }
     &[data-region="ema"] {
-      background: #f36f21;
+      background: #524fa2;
     }
     &[data-region="asia"] {
-      background: #524fa2;
+      background: #2a9964;
     }
   }
 }
@@ -114,7 +114,7 @@ body {
     height: 20px;
 
     &.microsoft {
-      background: @df-middle-gray;
+      background: @df-dark-gray;
       margin-bottom: 5px;
     }
     &.local {
@@ -157,12 +157,12 @@ body {
   height: 18px !important;
 
   &.americas {
-    background: #da2128; 
+    background: #2384c6; 
   }
   &.ema {
-    background: #f36f21; 
+    background: #524fa2; 
   }
   &.asia {
-    background: #524fa2;
+    background: #2a9964;
   }
 }
