new colors, map layers

--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -2,10 +2,10 @@
 @import "flexbox";
 
 @aspect-ratio: 7/10;
-@americas: #B23600;
-@ema: #FF8A00;
-@asia: #CC5400;
-@red: #B21E00;
+@americas: #EC5519;
+@ema: #717400;
+@asia: #DC8505;
+@red: #BE2805;
 
 body {
   max-width: 960px;
