--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -315,6 +315,13 @@ body {
   border-left: 3px solid #888;
   height: 12px;
   width: 12px;
+  opacity: .8;
+}
+
+.highlighted .arrowhead {
+  border-top: 3px solid #666;
+  border-left: 3px solid #666;
+  opacity: 1;
 }
 
 .select-paragraph {
