final text changes

--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -257,6 +257,10 @@ body {
   border-style: none !important;
 }
 
+.zoomed .div-label {
+  display: none;
+}
+
 .dot {
   border-radius: 50%;
   font-weight: bold;
@@ -267,7 +271,6 @@ body {
   .div-label {
     color: white;
     text-align: center;
-    // display: none;
   }
 
   &.index-1 {
