--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -14,10 +14,9 @@ body {
 }
 
 .outer {
-  border-top: 1px solid @df-border-gray;
   border-bottom: 1px solid @df-border-gray;
-  padding: 20px 0;
-  margin: 20px 0;
+  padding-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 .container, .buttons {
@@ -47,6 +46,9 @@ body {
 
 .button {
   .flex(1);
+  .display-flex();
+  .align-items(center);
+  .justify-content(center);
   margin: 10px;
   margin-left: 0;
   padding: 10px;
@@ -59,6 +61,10 @@ body {
   cursor: pointer;
   transition: background .1s linear;
   background: @df-light-gray;
+
+  &:last-child {
+    margin-right: 0;
+  }
 
   @media @mobile {
     margin: 10px 0;
@@ -345,6 +351,10 @@ body {
   padding-top: 10px;
   font-size: 11.5px;
   color: @df-middle-gray;
+
+  .sources {
+    color: @df-border-gray;
+  }
 
   .credit-name {
     padding-top: 2px;
